objects/PSM_TAP_OUT_CS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Serve da rubinetto all&apos;Integrazione Outbound PSM</description>
    <fields>
        <fullName>Elenco_Citta__c</fullName>
        <label>Elenco_Citta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On_Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <type>Date</type>
    </fields>
    <label>PSM_TAP_OUT_CS</label>
</CustomObject>